--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,229 +1,233 @@
-.main {
+.container {
+  min-height: 100vh;
+  width: 100vw;
+  position: relative;
+  background: #E8ECF2;
+  padding: 60px 103px 80px 50px;
+}
+
+.headerImage {
+  width: 100vw;
+  height: auto;
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+}
+
+.profile {
+  position: absolute;
+  top: 75px;
+  right: 155px;
+  color: #FDFDFD;
+  font-size: 16px;
+  font-family: Inter;
+  font-weight: 500;
+  word-wrap: break-word;
+  z-index: 11;
+}
+
+.sidebar {
+  height: calc(100vh - 60px - 80px);
+  width: 344px;
+  padding: 40px 30px 60px 40px;
+  background: #FFFFFF;
+  z-index: 100;
+  position: relative;
+  box-shadow: 20px 20px 50px rgba(161.19, 176.13, 206.86, 0.04);
+  border-radius: 24px;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
+.sidebarTitle {
+  margin-left: 18px;
+  width: 192px;
+  color: #1A1E26;
+  font-size: 22px;
+  font-family: Inter;
+  font-weight: 800;
+  word-wrap: break-word;
+  margin-bottom: 30px;
+}
+
+.sidebarMenu {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.teamContainer {
+  height: 103px;
   width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
+  background: #4746BD;
+  border-radius: 16px;
+  padding: 20px 24px 22px 22px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.teamData {
+  display: flex;
+  gap: 12px;
+  height: 100%;
 }
 
-.code {
+.teamIcon {
+  width: 32px;
+  height: 32px;
+  background: white;
+  box-shadow: 5px 8px 13px rgba(5.21, 25.62, 122.45, 0.05);
+  border-radius: 23.04px;
+}
+
+.teamDataRight {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.teamTitle {
+  color: #FCFCFD;
+  font-size: 14.40px;
+  font-family: Inter;
   font-weight: 700;
-  font-family: var(--font-mono);
+  letter-spacing: 0.16px;
+  word-wrap: break-word;
+  margin-bottom: 4px;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+.teamSubtitle {
+  color: white;
+  font-size: 9px;
+  font-family: Inter;
+  font-weight: 500;
+  letter-spacing: 0.13px;
+  word-wrap: break-word;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
+.teamUpdatesContainer {
   display: flex;
-  justify-content: center;
+  gap: 6px;
   align-items: center;
+}
+
+.teamUpdates {
+  color: #FFBB00;
+  font-size: 10.08px;
+  font-family: Inter;
+  font-weight: 700;
+  line-height: 10.37px;
+  letter-spacing: 0.14px;
+  word-wrap: break-word;
+}
+
+.line {
+  width: auto;
+  height: auto;
+}
+
+.flexWrapper {
+  display: flex;
+  gap: 60px;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  margin-top: 120px;
+}
+
+.contentGraphRow {
+  display: flex;
+  height: 350px;
   position: relative;
-  padding: 4rem 0;
+  z-index: 100;
+  margin-bottom: 34px;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.graphContainer {
+  width: 674px;
+  height: 100%;
+  background: #FDFDFD;
+  box-shadow: 19px 19px 47px rgba(161.19, 176.13, 206.86, 0.04);
+  border-radius: 18px;
+  margin-right: 30px;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.dailyGraph {
+  width: 133px;
+  height: 167px;
+  background: #FDFDFD;
+  box-shadow: 19px 19px 47px rgba(161.19, 176.13, 206.86, 0.04);
+  border-radius: 18px;
 }
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.dailyGraphContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 16px;
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.totalGraphContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.totalTasks {
+  height: 240px;
+  width: 190px;
+  background: #FDFDFD;
+  box-shadow: 19px 19px 47px rgba(161.19, 176.13, 206.86, 0.04);
+  border-radius: 18px;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+.todayGraph {
+  height: 93px;
+  width: 190px;
+  background: #FDFDFD;
+  box-shadow: 19px 19px 47px rgba(161.19, 176.13, 206.86, 0.04);
+  border-radius: 18px;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.mapContainer {
+  width: 100%;
+  display: flex;
+  gap: 54px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.criticalConditions {
+  height: 275px;
+  width: 563px;
+  background: white;
+  box-shadow: 19px 19px 47px rgba(161.19, 176.13, 206.86, 0.04);
+  border-radius: 18px;
+  margin-bottom: 35px;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.developersContainer {
+  display: flex;
+  gap: 14px;
+}
+
+.developers {
+  height: 139px;
+  width: 178px;
+  background: white;
+  box-shadow: 19px 19px 47px rgba(161.19, 176.13, 206.86, 0.04);
+  border-radius: 18px;
+}
+
+.map {
+  width: 426px;
+  height: 421px;
+  background: white;
+  box-shadow: 19px 19px 47px rgba(161.19, 176.13, 206.86, 0.04);
+  border-radius: 18px;
 }
