--- a/src/app/statistics/page.module.css
+++ b/src/app/statistics/page.module.css
@@ -18,3 +18,9 @@
     display: flex;
     flex-direction: column;
 }
+
+.greyLine {
+    width: 100%;
+    height: 1px;
+    background: #e0e0e0;
+}
